--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,18 +31,19 @@ if (UNIX)
 find_package(PkgConfig)
 pkg_check_modules(GTK gtk+-3.0)
 pkg_check_modules(Glib glib-2.0)
-include_directories(include ${GTK_INCLUDE_DIRS})
-link_directories(${GTK_LIBRARY_DIRS})
-include_directories(include ${Glib_INCLUDE_DIRS})
-link_directories(${Glib_LIBRARY_DIRS})
+include_directories(${GTK_INCLUDE_DIRS} ${Glib_INCLUDE_DIRS})
+link_directories(${GTK_LIBRARY_DIRS} ${Glib_LIBRARY_DIRS})
 endif()
 
-add_executable(wordle ${GUI_TYPE} app.c common.c gui.c event.c)
+include_directories(include)
+
+add_executable(wordle ${GUI_TYPE} src/app.c src/common.c src/gui.c src/event.c)
 if (UNIX)
 target_link_libraries(wordle ${GTK_LIBRARIES})
 install(FILES ${CMAKE_SOURCE_DIR}/wordle DESTINATION bin)
 endif()
 if (MSVC)
+target_sources(wordle PRIVATE res/wordle.rc)
 target_link_libraries(wordle gtk-3 gobject-2.0 gio-2.0 glib-2.0)
 install(FILES ${GTK_DIR}/bin/gtk-3-vs16.dll DESTINATION Wordle)
 install(FILES ${GTK_DIR}/bin/gdk-3-vs16.dll DESTINATION Wordle)
