--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,9 +44,9 @@ install(FILES ${CMAKE_SOURCE_DIR}/wordle DESTINATION bin)
 endif()
 if (MSVC)
 target_sources(wordle PRIVATE res/wordle.rc)
-target_link_libraries(wordle gtk-3 gobject-2.0 gio-2.0 glib-2.0)
-install(FILES ${GTK_DIR}/bin/gtk-3-vs16.dll DESTINATION Wordle)
-install(FILES ${GTK_DIR}/bin/gdk-3-vs16.dll DESTINATION Wordle)
+target_link_libraries(wordle gtk-3 gobject-2.0 gio-2.0 glib-2.0 pango-1.0)
+install(FILES ${GTK_DIR}/bin/gtk-3-vs17.dll DESTINATION Wordle)
+install(FILES ${GTK_DIR}/bin/gdk-3-vs17.dll DESTINATION Wordle)
 install(FILES ${GTK_DIR}/bin/gobject-2.0-0.dll DESTINATION Wordle)
 install(FILES ${GTK_DIR}/bin/gio-2.0-0.dll DESTINATION Wordle)
 install(FILES ${GTK_DIR}/bin/glib-2.0-0.dll DESTINATION Wordle)
