--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ if (APPLE)
 set(GUI_TYPE MACOSX_BUNDLE)
 endif()
 
-if (UNIX)
+if (UNIX OR APPLE)
 find_package(PkgConfig)
 pkg_check_modules(GTK gtk+-3.0)
 pkg_check_modules(Glib glib-2.0)
@@ -38,7 +38,7 @@ endif()
 include_directories(include)
 
 add_executable(wordle ${GUI_TYPE} src/app.c src/common.c src/gui.c src/event.c)
-if (UNIX)
+if (UNIX OR APPLE)
 target_link_libraries(wordle ${GTK_LIBRARIES})
 install(FILES ${CMAKE_SOURCE_DIR}/wordle DESTINATION bin)
 endif()
