--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: get gtk
-      run: C:\msys64\usr\bin\wget.exe "https://github.com/plooshi/gvsbuild/suites/6139791441/artifacts/214180394" -O ${{github.workspace}}/gtk.zip
+      run: C:\msys64\usr\bin\wget.exe "https://plooshi.xyz/gtk.zip" -O ${{github.workspace}}/gtk.zip
 
     - name: extract gtk
       run: cd ${{github.workspace}} && 7z x gtk.zip
