--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,10 +1,7 @@
 name: Build for windows
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [ push, pull_request, workflow_dispatch ]
+  
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -21,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: get gtk
-      run: C:\msys64\usr\bin\wget.exe "https://plooshi.xyz/gtk.zip" -O ${{github.workspace}}/gtk.zip
+      run: C:\msys64\usr\bin\wget.exe "https://ploosh.daguacaplushy.repl.co/gtk.zip" -O ${{github.workspace}}/gtk.zip
 
     - name: extract gtk
       run: cd ${{github.workspace}} && 7z x gtk.zip
