--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: get gtk
-      run: C:\msys64\usr\bin\wget.exe "https://ploosh.daguacaplushy.repl.co/gtk.zip" -O ${{github.workspace}}/gtk.zip
+      run: C:\msys64\usr\bin\wget.exe "https://ploosh.daguacaplushy.repl.co/Gtk3.zip" -O ${{github.workspace}}/gtk.zip
 
     - name: extract gtk
       run: cd ${{github.workspace}} && 7z x gtk.zip
