--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -32,7 +32,7 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
     
     - name: Create Package
-      run: cmake ${{github.workspace}}/build --install
+      run: cmake --install ${{github.workspace}}/build
 
     - name: upload
       # Execute tests defined by the CMake configuration.  
