--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -25,14 +25,14 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: mkdir C:\dist && cmake -DCMAKE_INSTALL_PREFIX:PATH=C:\dist -B ${{github.workspace}}/build -DGTK_DIR=${{github.workspace}}/release -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: mkdir C:\dist && cmake -DCMAKE_INSTALL_PREFIX:PATH=C:\dist -B ${{github.workspace}} -DGTK_DIR=${{github.workspace}}/release -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}} --config ${{env.BUILD_TYPE}}
     
     - name: Create Package
-      run: cmake --install ${{github.workspace}}/build
+      run: cmake --install ${{github.workspace}}
 
     - name: upload
       # Execute tests defined by the CMake configuration.  
