--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.8)
 
 if (MSVC)
 if (!GTK_DIR)
-message("GTK_DIR not set, dont question if there are errors. To set it please add -DGTK_DIR:PATH=<path to GTK and dependencies directory>")
+message("GTK_DIR not set, there may be errors about not finding headers. To set it please add -DGTK_DIR:PATH=<path of GTK and dependencies directory>")
 endif()
 include_directories(
     ${GTK_DIR}/include
@@ -28,11 +28,10 @@ set(GUI_TYPE MACOSX_BUNDLE)
 endif()
 
 if (UNIX OR APPLE)
-find_package(PkgConfig)
+find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTK gtk+-3.0)
-pkg_check_modules(Glib glib-2.0)
-include_directories(${GTK_INCLUDE_DIRS} ${Glib_INCLUDE_DIRS})
-link_directories(${GTK_LIBRARY_DIRS} ${Glib_LIBRARY_DIRS})
+include_directories(${GTK_INCLUDE_DIRS})
+link_directories(${GTK_LIBRARY_DIRS})
 endif()
 
 foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
@@ -62,7 +61,7 @@ add_executable(wordle ${GUI_TYPE}
 )
 if (UNIX OR APPLE)
 target_link_libraries(wordle ${GTK_LIBRARIES})
-install(FILES ${CMAKE_SOURCE_DIR}/bin/wordle DESTINATION bin)
+install(TARGETS wordle DESTINATION bin)
 endif()
 if (MSVC)
 target_sources(wordle PRIVATE res/wordle.rc)
@@ -91,5 +90,5 @@ install(FILES ${GTK_DIR}/bin/fontconfig-1.dll DESTINATION Wordle)
 install(FILES ${GTK_DIR}/bin/freetype-6.dll DESTINATION Wordle)
 install(FILES ${GTK_DIR}/bin/libpng16.dll DESTINATION Wordle)
 install(FILES ${GTK_DIR}/bin/expat.dll DESTINATION Wordle)
-install(FILES ${CMAKE_SOURCE_DIR}/bin/wordle.exe DESTINATION Wordle)
+install(TARGETS wordle DESTINATION Wordle)
 endif()
